# MailRelay

./: Cargo.toml  LICENSE  README  README.md
Snippets/: sendmail.go  sendmail.js  sendmail.php  sendmail.py  sendmail.rb
src/: dusa.rs  log.txt  mailing.rs  main.rs
