[package]
name = "artisan_mail_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
dusa_collection_utils = "2.6.3"
#recs_lib = "2.5.2"
dusa = "1.2.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
pretty_env_logger = "0.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
